agregado los submenus y adecuación de la base de datos.

--- a/saitae-web/src/main/webapp/pages/permiso.xhtml
+++ b/saitae-web/src/main/webapp/pages/permiso.xhtml
@@ -56,7 +56,7 @@
                                            #{permisoEstudianteController.us.persona.personaApellido}"/>
 
                             <p:outputLabel for="mask" value="Fecha de inicio:" />
-                            <p:calendar id="mask" value="#{permisoEstudianteController.p.permisoFechaInicio}" 
+                            <p:calendar id="mask" value="#{permisoEstudianteController.p.permisosPK.permisoFechaInicio}" 
                                         pattern="dd-MM-yyyy" mask="true" />
 
                             <p:outputLabel for="mask1" value="Fecha de finalización: " />
