--- a/saitae-web/src/main/webapp/pages/cvista.xhtml
+++ b/saitae-web/src/main/webapp/pages/cvista.xhtml
@@ -38,9 +38,12 @@
 
                                 <p:column headerText="Índice">
                                     <p:cellEditor>
-                                        <f:facet name="output"><h:outputText value="#{a.accesoIndice}" /></f:facet>
-                                        <f:facet name="input"><p:inputText value="#{a.accesoIndice}" 
-                                                                           style="width:100%" label="Índice"/></f:facet>
+                                        <f:facet name="output"><h:outputText value="#{a.accesoIndice.idacceso}" /></f:facet>
+                                        <f:facet name="input"><p:selectOneMenu id="console" value="#{a.accesoIndice.idacceso}" 
+                                                                               style="width:125px" title="Seleccione un tipo ">
+                                                <f:selectItems value="#{vistasMenuController.accesosItems}"/>
+                                            </p:selectOneMenu>
+                                        </f:facet>
                                     </p:cellEditor>
                                 </p:column>
 
