--- a/saitae-web/src/main/webapp/pages/nuevoalumno.xhtml
+++ b/saitae-web/src/main/webapp/pages/nuevoalumno.xhtml
@@ -85,7 +85,7 @@
                                 <f:selectItem itemLabel="Seleccione" itemValue="" />
                                 <f:selectItem itemLabel="Solter@" itemValue="0" />
                                 <f:selectItem itemLabel="Casad@" itemValue="1" />
-                                <f:selectItem itemLabel="Acompañado" itemValue="2"/>
+                                <f:selectItem itemLabel="Acompañad@" itemValue="2"/>
                             </p:selectOneMenu>
 
                             <h:outputText value="Departamento de nacimiento: *" />
