--- a/saitae-web/src/main/webapp/pages/perfil.xhtml
+++ b/saitae-web/src/main/webapp/pages/perfil.xhtml
@@ -21,7 +21,7 @@
                     }
                 </style>
                 <h:form id="form">
-                    <p:carousel value="#{anuncioController.all}" headerText="Anuncios" var="ann" circular="true" 
+                    <p:carousel id="carousel" value="#{anuncioController.all}" headerText="Anuncios" var="ann" circular="true" 
                                 footerText="Total de anuncios: #{anuncioController.all.size()}." numVisible="1"
                                 itemStyle="text-align:center" autoPlayInterval="5000">
                         <p:panelGrid columns="1" style="width:100%;margin:10px 0px" 
@@ -38,7 +38,6 @@
                     </p:carousel>
                 </h:form>
             </ui:define>
-
         </ui:composition>
 
     </body>
