--- a/saitae-web/src/main/webapp/pages/agregacion.xhtml
+++ b/saitae-web/src/main/webapp/pages/agregacion.xhtml
@@ -3,11 +3,14 @@
 <ui:composition xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
                 template="./../WEB-INF/template/plantilla1.xhtml"      
                 xmlns:t="http://java.sun.com/jsf/composite/components/autentia"
-                    
-                xmlns:h="http://xmlns.jcp.org/jsf/html">
+                xmlns:h="http://xmlns.jcp.org/jsf/html"
+                xmlns:f="http://xmlns.jcp.org/jsf/core"
+                xmlns:p="http://primefaces.org/ui">
+    
     <ui:define name="content">
         <h:form>
-            <t:persona id="p"/>
+            <p:outputLabel value="#{maestroController.departamento}"/>
+            <t:persona id="persona"/>
         </h:form>
     </ui:define>
 </ui:composition>
