--- a/saitae-web/src/main/webapp/pages/tipopp.xhtml
+++ b/saitae-web/src/main/webapp/pages/tipopp.xhtml
@@ -4,7 +4,8 @@
       xmlns:h="http://xmlns.jcp.org/jsf/html"
       xmlns:p="http://primefaces.org/ui"
       xmlns:f="http://xmlns.jcp.org/jsf/core"
-      xmlns:ui="http://xmlns.jcp.org/jsf/facelets">
+      xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
+      xmlns:t="http://java.sun.com/jsf/composite/components/autentia">
     <h:head>
         <title>Administración de Tipos</title>
         <h:outputStylesheet library="css" name="tpp.css"/>
@@ -539,10 +540,6 @@
                             </div>
                         </p:tab>
                     </p:tabView> 
-                    <p:commandButton value="Print" type="button" icon="pi pi-print" 
-                                     style="display:block;margin-bottom: 20px">
-                        <p:printer target="form" />
-                    </p:commandButton>
                 </h:form>
             </ui:define>
         </ui:composition>
