--- a/saitae-web/src/main/webapp/pages/recursos.xhtml
+++ b/saitae-web/src/main/webapp/pages/recursos.xhtml
@@ -5,21 +5,74 @@
       xmlns:p="http://primefaces.org/ui"
       xmlns:f="http://xmlns.jcp.org/jsf/core"
       xmlns:ui="http://xmlns.jcp.org/jsf/facelets">
-    <h:head>
-        <title>Administración de Recursos</title>
-        <style type="text/css">
-    .value {
-        font-weight: bold;
-    }
-</style>
- 
- 
-    </h:head>
-    <h:body>
-         <p:outputLabel for="paises" value="Paises" />
-         <p:selectOneMenu id="paises" value="#{recursosController.pais}" style="width:125px">
-             <f:selectItems value="#{recursosController.listaPais}"/>
-                                      
-        </p:selectOneMenu>
-    </h:body>
+    <body>
+        <ui:composition template="./../WEB-INF/template/plantilla1.xhtml">
+            <ui:define name="content">
+
+                <h:form styleClass="centred-form" id="frm">
+                    <p:panel header="Recursos">
+                        <h:panelGrid id="r" columns="2" columnClasses="label, value">
+                            <p:outputLabel for="paises" value="Paises" />
+                            <p:selectOneMenu id="paises" value="#{recursosController.listaPais}" style="width:125px">
+                                <f:selectItems var="p" itemLabel="#{p.paisNombre}" value="#{recursosController.listaPais}"/>
+                            </p:selectOneMenu>
+                            <p:outputLabel for="categoria" value="Categorias" />
+                            <p:selectOneMenu id="categoria" value="#{recursosController.categoria}" style="width:125px">
+                                <f:selectItems var="c" itemLabel="#{c.categoriaNombre}"  value="#{recursosController.categoria}"/>
+                            </p:selectOneMenu>
+                            <p:outputLabel for="tiporecurso" value="Tipo Recurso" />
+                            <p:selectOneMenu id="tiporecurso" value="#{recursosController.tiporecurso}" style="width:125px">
+                                <f:selectItems var="tr" itemLabel="#{tr.tipoRecursoNombre}"  value="#{recursosController.tiporecurso}"/>
+                            </p:selectOneMenu>
+                            <p:outputLabel for="tipocargo" value="Tipo Cargo" />
+                            <p:selectOneMenu id="tipocargo" value="#{recursosController.tipocargo}" style="width:125px">
+                                <f:selectItems var="tc" itemLabel="#{tc.nombre}"  value="#{recursosController.tipocargo}"/>
+                            </p:selectOneMenu>
+                            <h:outputLabel value="Nombre"/>
+                            <p:inputText value="#{recursosController.r.nombre}" required="true" />
+
+                            <h:outputLabel value="Tipo Prestamo"/>
+                            <p:selectBooleanCheckbox value="#{recursosController.r.tipoPrestamo}" itemLabel="Interno"/>
+                            <p:selectBooleanCheckbox value="#{recursosController.r.tipoPrestamo}" itemLabel="Externo"/>
+                            <p:selectBooleanCheckbox value="#{recursosController.r.tipoPrestamo}" itemLabel="Sala"/>
+                            <p:outputLabel for="activo" value="Activo" />
+                            <p:selectOneMenu id="activo" value="#{recursosController.r.activo}" required="true"
+                                             style="width:125px" title="Seleccione activo o inactivo">
+                                <f:selectItem itemLabel="Seleccione" itemValue="" />
+                                <f:selectItem itemLabel="Activo" itemValue="0" />
+                                <f:selectItem itemLabel="Inactivo" itemValue="1" />
+                            </p:selectOneMenu>
+                            <p:messages for="activo" showSummary="true"/>
+                            <p:outputLabel for="valor" value="Valor unitario " />
+                            <p:selectOneMenu id="valor" value="#{recursosController.r.valorUnitario}" required="true"
+                                             style="width:125px" title="Seleccione valor">
+                                <f:selectItem itemLabel="Seleccione" itemValue="" />
+                                <f:selectItem itemLabel="Real" itemValue="0" />
+                                <f:selectItem itemLabel="Estimado" itemValue="1" />
+                            </p:selectOneMenu>
+                            <p:messages for="valor" showSummary="true"/>
+                            <p:outputLabel for="estado" value="Estado Fisico" />
+                            <p:selectOneMenu id="estado" value="#{recursosController.r.estadoFisico}" style="width:125px">
+                                <f:selectItem itemLabel="Seleccione" itemValue="" />
+                                <f:selectItem itemLabel="Bueno" itemValue="" />
+                                <f:selectItem itemLabel="Regular" itemValue="Xbox One" />
+                            </p:selectOneMenu>
+                            <p:selectOneMenu id="tipovalor" value="#{recursosController.r.tipoValor}" required="true"
+                                             style="width:125px" title="Seleccione valor">
+                                <f:selectItem itemLabel="Seleccione" itemValue="" />
+                                <f:selectItem itemLabel="Real" itemValue="0" />
+                                <f:selectItem itemLabel="Estimado" itemValue="1" />
+                            </p:selectOneMenu>
+                            <h:outputLabel value="Modelo"/>
+                            <p:inputText value="#{recursosController.r.modelo}" required="true" />
+                        </h:panelGrid>
+
+                    </p:panel>
+
+                </h:form>
+            </ui:define>
+
+        </ui:composition>
+    </body>
 </html>
+
