--- a/saitae-web/src/main/webapp/pages/agregacion.xhtml
+++ b/saitae-web/src/main/webapp/pages/agregacion.xhtml
@@ -45,7 +45,7 @@
                                            dui="#{maestroController.dui}" municipio="#{maestroController.municipio}" 
                                            municipioLista="#{maestroController.municipiosLista}" 
                                            persona="#{maestroController.maestro.persona}"
-                                           onItemSelect="#{maestroController.onItemSelect(event)}"/>
+                                           listenerA="#{maestroController.change}"/>
                             </p:panel>
                         </p:tab>
                         <p:tab id="address" title="Contacto">
